fix overlap on voting screen, clear out old css

--- a/react-ui/src/style/App.css
+++ b/react-ui/src/style/App.css
@@ -79,84 +79,44 @@
 .option-card {
   transition: all 1.5s ease;
   position: absolute;
-  /*grid-column: 2;*/
   width: 400px;
   height: 125px;
-
-
-
-  /*display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);*/
 }
 
 .option-vote-total {
   display: inline-block;
-  width: 10%;
-  margin: 0;
   position: relative;
   bottom: 35px;
   left: 20px;
-
-  justify-self: center;
-  align-self: center;
   font-size: 4em;
   margin: 0;
 }
 
 .option-location {
-  /*can plug in grid stuff here*/
-  display: inline-block;
-  width: 60%;
   position: relative;
+  display: inline-block;
   bottom: 50px;
+  width: 200px;
+  padding-left: 30px;
   font-size: 1.1em;
-
-  justify-self: center;
-  align-self: center;
 }
 
 .option-vote-button {
   display: inline-block;
-  width: 20%;
+  width: 85px;
 
   margin: 20px;
-  border-radius: 30px;
-  justify-self: center;
-  align-self: center;
 }
 
 .option-container {
   margin: 0 auto;
   width: 400px;
-  /*display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);*/
+  position: relative;
 }
 
 .selected {
-  /*margin-top: 150px;*/
   background-color: #F5B82E;
   color: #0072BB;
-  /*grid-row: 1;*/
-}
-
-.selected .option-vote-button {
-  border: none;
-}
-
-.order0 {
-  margin-top: 20px
-}
-
-.order1 {
-  margin-top: 150px
-}
-
-.order2 {
-  margin-top: 300px
 }
 
 .filter-section {
